--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="shortcut icon" href="./src/assets/images/Logo.png" type="image/x-icon">
-    <link rel="shortcut icon" href="./src/assets/logo." type="image/x-icon">
+    <!-- <link rel="shortcut icon" href="./src/assets/logo." type="image/x-icon"> -->
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jack | Portfolio</title>
+    <title>Jack's | Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
